--- a/assets/default/css/bootstrap-datetimepicker.css
+++ b/assets/default/css/bootstrap-datetimepicker.css
@@ -309,7 +309,7 @@
 }
 .bootstrap-datetimepicker-widget table td.active,
 .bootstrap-datetimepicker-widget table td.active:hover {
-  background-color: #37bf00;
+  background-color: var(--siteColor);
   color: #fff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
