--- a/assets/default/css/colors.css
+++ b/assets/default/css/colors.css
@@ -1,32 +1,41 @@
-/* ------------------------------------------------------------------- */
-/* #e53038 (229,48,56)
----------------------------------------------------------------------- */
+@charset "utf-8";
+/* CSS Document */
+:root {
+    --siteColor: #8e1ef1;
+	--webColor: #333;
+	--siteHoverColor:#6600c0;
+	--webHoverColor:#222;
+}
 .numbered.color ol > li::before {
-     border:1px solid #e53038;
-     color:#e53038;
+     border:1px solid var(--siteColor);
+     color:var(--siteColor);
 }
  .numbered.color.filled ol > li::before {
-     border:1px solid #e53038;
-     background-color:#e53038;
+     border:1px solid var(--siteColor);
+     background-color:var(--siteColor);
 }
  .radio input[type="radio"]:checked + label .radio-label {
-     background-color:#e53038;
-     border-color:#e53038;
+     background-color:var(--siteColor);
+     border-color:var(--siteColor);
 }
  .checkbox input:checked + label span.checkbox-icon {
-     background-color:#e53038;
-     border-color:#e53038;
+     background-color:var(--siteColor);
+     border-color:var(--siteColor);
 }
  .slider-handle {
-     border:2px solid #e53038;
+     border:2px solid var(--siteColor);
 }
  .infoBox-close:hover {
-     color:#fff;
-     background-color:#e53038;
+	color:#fff;
+	background-color:var(--siteColor);
 }
- .message-bubble.me .message-text:before {
-     border-left:6px solid #e53038;
+.message-bubble.me .message-text{
+	background-color: rgb(100 190 67 / 0.1);
 }
+.message-bubble .message-text.message-deleted{
+	background-color: rgb(220 53 69 / 0.1);
+}
+
  a,
  .header-widget .log-in-button:hover i,
  .notification-text span.color,
@@ -42,7 +51,8 @@
  .single-page-header .header-details li a:hover,
  .blog-post-content h3 a:hover,
  #posts-nav li a:hover,
- .task-tags span,
+ .task-tags > span,
+ .task-tags > a,
  .freelancer-detail-item a:hover,
  .list-4 li:before,
  .list-3 li:before,
@@ -52,8 +62,8 @@
  .keyword,
  .banner-headline strong.color,
  .category-box-icon,
- .recommended .pricing-plan-label,
- .recommended .pricing-plan-label strong,
+ /*.recommended .pricing-plan-label,
+ .recommended .pricing-plan-label strong,*/
  .boxed-widget.summary li.total-costs span,
  .testimonial-box:before,
  .single-counter h3,
@@ -68,20 +78,25 @@
  .boxed-list-item .item-details .detail-item a:hover,
  .job-overview .job-overview-inner ul li i,
  .dashboard-nav ul:before,
- .dashboard-nav ul li.active-submenu a i,
+ /*.dashboard-nav ul li.active-submenu a i,*/
  .dashboard-nav ul li.active a i,
  .dashboard-nav ul li:hover a i,
- .dashboard-nav ul li.active-submenu a,
+ /*.dashboard-nav ul li.active-submenu a,*/
  .dashboard-nav ul li:hover a,
  .dashboard-nav ul li.active a,
- .dashboard-nav ul li.active-submenu a:after,
+ /*.dashboard-nav ul li.active-submenu a:after,*/
  .dashboard-nav ul li.active a:after,
  .dashboard-nav ul li:hover a:after,
- .dashboard-box .headline h3 i,
  .help-icon,
+ .slick-prev:hover,
+ .slick-next:hover,
  .header-widget .log-in-button:hover,
- .header-widget .log-in-button:hover i {
-     color:#e53038;
+ .header-widget .log-in-button:hover i,
+ .freelancer-name h4 a:hover,
+ .job-listing h4 > a:hover, .job-listing h3 > a:hover,
+ .messages-headline h4 > a:hover,
+ .messages-headline p > a:hover {
+     color:var(--siteColor);
 }
 #backtotop a,
  .header-notifications-trigger span,
@@ -146,99 +161,97 @@
  .dashboard-nav ul li span.nav-tag,
  .dashboard-box .button.dark:not(.ico):hover,
  .messages-inbox ul li:before,
- .message-by h5 i,
- .message-bubble.me .message-text {
-     background-color:#e53038;
+ .message-by h5 i {
+	background-color:var(--siteColor);
 }
+
  .transparent-header #navigation > ul li:hover ul li:hover a:after,
  .transparent-header #navigation > ul li:hover a:after,
  .transparent-header #navigation > ul li a.current:after,
  .compact-list-layout .job-listing:before,
  .tasks-list-container.compact-list .task-listing:before,
  .compact-list.freelancers-list-layout .freelancer:before,
- .accordion-header,
  .tabs-header,
  .intro-search-field .field-title,
  .category-box:hover,
  .photo-box:hover:before,
- .photo-box.small .photo-box-content span,
- .slick-prev:hover,
- .slick-next:hover,
+ .photo-box.small .photo-box-content span, 
  .bootstrap-select.btn-group .bs-actionsbox div button:hover {
-     background:#e53038;
+     background:var(--siteColor);
 }
  .uploadButton .uploadButton-button,
  .pricing-plan .button {
-     color:#e53038;
-     border:1px solid #e53038;
+     color:var(--siteColor);
+     border:1px solid var(--siteColor);
 }
  .payment-tab-trigger > input:checked ~ label::before,
- .dashboard-nav ul li.active-submenu,
+ /*.dashboard-nav ul li.active-submenu,*/
  .dashboard-nav ul li.active,
  .dashboard-nav ul li:hover {
-     border-color:#e53038;
+     border-color:var(--siteColor);
 }
 
  #navigation ul ul.dropdown-nav ul.dropdown-nav li:hover a:after,
   #navigation ul ul.dropdown-nav li:hover a:after, 
   #navigation ul li:hover a:after {
-     background: rgba(229,48,56,0.13);
+     background: rgba(100,190,67,0.13);
 }
 
  #navigation ul li a.current:after {
-     background: rgba(229,48,56,0.13);
+     background: rgba(100,190,67,0.13);
 }
- .pagination ul li a.current-page {
-     box-shadow: 0 2px 8px rgba(229,48,56,0.25) 
-}
+/*.pagination ul li a.current-page {
+     box-shadow: 0 2px 8px rgba(100,190,67,0.25) 
+}*/
  .sidebar-search-button-container button {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.1);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.1);
 }
  .sidebar-search-button-container button:hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.25);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.25);
 }
  .job-listing.with-apply-button:hover .list-apply-button {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.15);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
 }
  .task-listing-bid-inner .button {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.15);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
 }
  .task-listing-bid-inner .button:hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.25);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.25);
 }
- .task-tags span {
-     background-color: rgba(229,48,56,.07);
+ .task-tags > span,
+ .task-tags > a {
+     background-color: rgba(100,190,67,.07);
 }
  .freelancers-grid-layout .freelancer-details a.button {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.1);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.1);
 }
  .freelancer-details a.button:hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.2);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.2);
 }
  .freelancers-list-layout .freelancer-details a.button {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.15);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
 }
  .freelancers-list-layout .freelancer-details a.button:hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.25);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.25);
 }
  .letters-list a.current {
-     box-shadow: 0 2px 8px rgba(229,48,56,0.25);
+     box-shadow: 0 2px 8px rgba(100,190,67,0.25);
 }
  span.button, button.button, input[type="button"], input[type="submit"], a.button {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.15);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
 }
  .move-on-hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.1);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.1);
 }
  .move-on-hover:hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.2);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.2);
 }
  .keyword {
-     background-color: rgba(229,48,56,0.07);
+     background-color: rgba(100,190,67,0.07);
 }
  @keyframes switch-shadow-color {
      0% {
-         box-shadow: 0 0 0 0 rgba(229,48,56,0.6);
+         box-shadow: 0 0 0 0 rgba(100,190,67,0.6);
     }
      100% {
          box-shadow: 0 0 0px 10px rgba(0,0,0,0);
@@ -246,115 +259,152 @@
 }
  @keyframes radius-shadow {
      0% {
-         box-shadow: 0 0 0 0 rgba(229,48,56,0.4);
+         box-shadow: 0 0 0 0 rgba(100,190,67,0.4);
     }
      100% {
          box-shadow: 0 0 0 10px rgba(0,0,0,0);
     }
 }
  .uploadButton .uploadButton-button {
-     box-shadow: 0 3px 10px rgba(229,48,56,0.1);
+     box-shadow: 0 3px 10px rgba(100,190,67,0.1);
 }
  .uploadButton .uploadButton-button:hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.15);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
 }
  .category-box:hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.2);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.2);
 }
  .photo-box:hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.25);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.25);
 }
  .recommended .pricing-plan-label {
-     background-color: rgba(229,48,56,0.06);
+     background-color: rgba(100,190,67,0.06);
 }
  .pricing-plan .button:hover, .pricing-plan.recommended .button {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.15);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
 }
  .pricing-plan .button {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.1);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.1);
 }
  .pricing-plan .button:hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.15);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
 }
  .breathing-icon {
-     box-shadow: 0 0 0 15px rgba(229,48,56,0.07);
+     box-shadow: 0 0 0 15px rgba(100,190,67,0.07);
 }
  @keyframes bicokAnim {
      0%,100% {
-         box-shadow: 0 0 0 15px rgba(229,48,56,0.07);
+         box-shadow: 0 0 0 15px rgba(100,190,67,0.07);
     }
      50% {
-         box-shadow: 0 0 0 28px rgba(229,48,56,0.12);
+         box-shadow: 0 0 0 28px rgba(100,190,67,0.12);
     }
 }
  .icon-box-check {
-     box-shadow: 0 0 0 5px rgba(229,48,56,0.1);
+     box-shadow: 0 0 0 5px rgba(100,190,67,0.1);
 }
  @keyframes checkAnim {
      0%,100% {
-         box-shadow: 0 0 0 5px rgba(229,48,56,0.15);
+         box-shadow: 0 0 0 5px rgba(100,190,67,0.15);
     }
      50% {
-         box-shadow: 0 0 0 8px rgba(229,48,56,0.15);
+         box-shadow: 0 0 0 8px rgba(100,190,67,0.15);
     }
 }
  .testimonial-author span {
-     box-shadow: 0 2px 10px rgba(229,48,56,0.25);
+     box-shadow: 0 2px 10px rgba(100,190,67,0.25);
 }
  .bidding-widget .button {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.15);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
 }
  .bidding-widget .button:hover {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.25);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.25);
 }
  .dialog-with-tabs .button {
-     box-shadow: 0 4px 12px rgba(229,48,56,0.15);
+     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
 }
  .slider-handle:after {
-     box-shadow: 0 0 0px 6px rgba(229,48,56,.12);
+     box-shadow: 0 0 0px 6px rgba(100,190,67,.12);
 }
  .slider-handle:hover:after {
-     box-shadow: 0 0 0px 8px rgba(229,48,56,.12);
+     box-shadow: 0 0 0px 8px rgba(100,190,67,.12);
 }
  .dropdown-menu > li > a:hover, .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover {
-     background-color: rgba(229,48,56,0.07);
+     background-color: rgba(100,190,67,0.07);
 }
  @keyframes clusterAnimation {
      0%,100% {
-         box-shadow: 0 0 0 6px rgba(229,48,56,0.15);
+         box-shadow: 0 0 0 6px rgba(100,190,67,0.15);
     }
      50% {
-         box-shadow: 0 0 0 10px rgba(229,48,56,0.15);
+         box-shadow: 0 0 0 10px rgba(100,190,67,0.15);
     }
 }
  @keyframes markerAnimation {
      0%,100% {
-         box-shadow: 0 0 0 6px rgba(229,48,56,0.15);
+         box-shadow: 0 0 0 6px rgba(100,190,67,0.15);
     }
      50% {
-         box-shadow: 0 0 0 8px rgba(229,48,56,0.15);
+         box-shadow: 0 0 0 8px rgba(100,190,67,0.15);
     }
 }
  a.apply-now-button {
-     box-shadow: 0 2px 8px rgba(229,48,56,0.15);
+     box-shadow: 0 2px 8px rgba(100,190,67,0.15);
 }
  a.apply-now-button:hover {
-     box-shadow: 0 2px 8px rgba(229,48,56,0.35);
+     box-shadow: 0 2px 8px rgba(100,190,67,0.35);
 }
- .dashboard-nav ul li.active-submenu, .dashboard-nav ul li.active, .dashboard-nav ul li:hover {
-     background-color: rgba(229,48,56,0.04);
+/*.dashboard-nav ul li.active-submenu,*/ .dashboard-nav ul li.active, .dashboard-nav ul li:hover {
+     background-color: rgba(100,190,67,0.1);
 }
- .dashboard-nav ul li.active-submenu a:after, .dashboard-nav ul li.active a:after, .dashboard-nav ul li:hover a:after {
-     background: rgba(229,48,56,0.13);
+/*.dashboard-nav ul li.active-submenu a:after,*/ .dashboard-nav ul li.active a:after/*, .dashboard-nav ul li:hover a:after*/ {
+     background: rgba(100,190,67,0.13);
 }
  .dashboard-box-list .button {
-     box-shadow: 0 3px 8px rgba(229,48,56,0.15);
+     box-shadow: 0 3px 8px rgba(100,190,67,0.15);
 }
  .dashboard-box .button.dark:not(.ico):hover {
-     box-shadow: 0 3px 8px rgba(229,48,56,0.15);
+     box-shadow: 0 3px 8px rgba(100,190,67,0.15);
 }
 
  #navigation ul ul.dropdown-nav ul.dropdown-nav li:hover a:after,
  #navigation ul ul.dropdown-nav li:hover a:after {
-     background-color:#e53038;
+     background-color:var(--siteColor);
  }
+ 
+/* custom color */
+.btn-site {
+	background-color:var(--siteColor);
+	color:#fff
+}
+.btn-site:hover, .btn-site:focus {
+	background-color:var(--siteHoverColor);
+	color:#fff
+}
+.btn-web {
+	background-color:var(--webColor);
+	color:#fff
+}
+.btn-web:hover, .btn-web:focus {
+	background-color:var(--webHoverColor);
+	color:#fff
+}
+.btn-outline-site {
+	border-color: var(--siteColor);
+	color: var(--siteColor);
+}
+.btn-outline-site:hover, .btn-outline-site:focus {
+	border-color: var(--siteColor);
+	background-color: var(--siteColor);
+	color: #fff;
+}
+.text-site,
+.task-listing h3.task-listing-title a:hover {
+	color:var(--siteColor)
+}
+.bg-site {
+	background-color:#37bf00;
+	color:#fff
+}
+
+/* END CSS */
