--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -29,6 +29,9 @@ ol, ul, dl {
 b, strong {
     font-weight: 600;
 }
+a{
+	text-decoration: none;
+}
 /* global end */
 
 body {	
@@ -37,8 +40,8 @@ body {
 	/*font-family:'Open sans', Helvetica, sans-serif;*/
 }
 .btn{
-	font-family:'Rubik', Helvetica, sans-serif;
-	font-weight:500;
+	border-radius: 2rem;
+	font-family: 'Rubik', Helvetica, sans-serif;
 }
 .btn-link:hover {
 	text-decoration: none;
@@ -1173,7 +1176,7 @@ ul.display-inline li {
 .header-widget ul.display-inline > li > a{
 	color:#000;
 	font-family:'Rubik', Helvetica, sans-serif;
-	font-size: 1.063rem;
+	font-size: 1rem;
 }
 .header-widget ul.display-inline > li > a:hover{
 	color:var(--siteColor);
@@ -1665,10 +1668,39 @@ ul.postJobStep li a i:last-child {
 	vertical-align: middle;
 }
 
-
-
-
-
+/* Komodoro */
+ul.p-search {
+	color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 0.813rem;
+    list-style: none;
+    margin-left: -0.5rem;
+    padding: 0;
+}
+ul.p-search > li{
+	margin-left: 0.5rem;
+	margin-bottom: 0.5rem;
+}
+ul.p-search > li > a{
+	background-color: rgb(0 0 0 / 50%);
+    border-radius: 1rem;
+	color: #fff;
+	display: block;
+    padding: 0.1rem 0.75rem 0.25rem;
+}
+ul.p-search > li > a:hover{
+	background-color: var(--siteColor);	
+	border-color: var(--siteColor);	
+	color: #fff;
+}
+.setlang > img{
+	border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+    height: 24px;
+    width: 24px;
+}
 
 
 
