--- a/assets/default/css/bootstrap-tagsinput.css
+++ b/assets/default/css/bootstrap-tagsinput.css
@@ -35,7 +35,7 @@
   box-shadow: none;
 }
 .bootstrap-tagsinput .tag {
-  color: #37bf00;
+  color: var(--siteColor);
 }
 .bootstrap-tagsinput .tag [data-role="remove"] {
   margin-right: 8px;
