--- a/assets/default/css/colors.css
+++ b/assets/default/css/colors.css
@@ -31,7 +31,7 @@
 	background-color:var(--siteColor);
 }
 .message-bubble.me .message-text{
-	background-color: rgb(100 190 67 / 0.1);
+	background-color: rgba(var(--rgbColor), 10%);
 }
 .message-bubble .message-text.message-deleted{
 	background-color: rgb(220 53 69 / 0.1);
@@ -195,11 +195,11 @@
  #navigation ul ul.dropdown-nav ul.dropdown-nav li:hover a:after,
   #navigation ul ul.dropdown-nav li:hover a:after, 
   #navigation ul li:hover a:after {
-     background: rgba(100,190,67,0.13);
+     background: rgba(var(--rgbColor), 10%);
 }
 
  #navigation ul li a.current:after {
-     background: rgba(100,190,67,0.13);
+     background: rgba(var(--rgbColor), 10%);
 }
 /*.pagination ul li a.current-page {
      box-shadow: 0 2px 8px rgba(100,190,67,0.25) 
@@ -248,7 +248,7 @@
      box-shadow: 0 4px 12px rgba(100,190,67,0.2);
 }
  .keyword {
-     background-color: rgba(100,190,67,0.07);
+     background-color: rgba(var(--rgbColor), 10%);
 }
  @keyframes switch-shadow-color {
      0% {
@@ -279,7 +279,7 @@
      box-shadow: 0 4px 12px rgba(100,190,67,0.25);
 }
  .recommended .pricing-plan-label {
-     background-color: rgba(100,190,67,0.06);
+     background-color: rgba(var(--rgbColor), 10%);
 }
  .pricing-plan .button:hover, .pricing-plan.recommended .button {
      box-shadow: 0 4px 12px rgba(100,190,67,0.15);
@@ -331,7 +331,7 @@
      box-shadow: 0 0 0px 8px rgba(100,190,67,.12);
 }
  .dropdown-menu > li > a:hover, .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover {
-     background-color: rgba(100,190,67,0.07);
+     background-color: rgba(var(--rgbColor), 10%);
 }
  @keyframes clusterAnimation {
      0%,100% {
@@ -356,10 +356,10 @@
      box-shadow: 0 2px 8px rgba(100,190,67,0.35);
 }
 /*.dashboard-nav ul li.active-submenu,*/ .dashboard-nav ul li.active, .dashboard-nav ul li:hover {
-     background-color: rgba(100,190,67,0.1);
+     background-color: rgba(var(--rgbColor), 10%);
 }
 /*.dashboard-nav ul li.active-submenu a:after,*/ .dashboard-nav ul li.active a:after/*, .dashboard-nav ul li:hover a:after*/ {
-     background: rgba(100,190,67,0.13);
+     background: rgba(var(--rgbColor), 10%);
 }
  .dashboard-box-list .button {
      box-shadow: 0 3px 8px rgba(100,190,67,0.15);
@@ -380,6 +380,7 @@
 }
 .btn-site:hover, .btn-site:focus {
 	background-color:var(--siteHoverColor);
+	border-color: var(--siteHoverColor);
 	color:#fff
 }
 .btn-web {
@@ -404,7 +405,7 @@
 	color:var(--siteColor)
 }
 .bg-site {
-	background-color:#37bf00;
+	background-color:var(--siteColor);
 	color:#fff
 }
 
