--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -506,6 +506,7 @@ a.header-notifications-button i {
 	display: inline-block;
 	border-radius: 50%;
 	position: relative;
+	max-width: 40px;
 }
 .user-avatar img {
 	width: 100%;
