--- a/assets/default/css/colors.css
+++ b/assets/default/css/colors.css
@@ -52,7 +52,6 @@
  .single-page-header .header-details li a:hover,
  .blog-post-content h3 a:hover,
  #posts-nav li a:hover,
- .task-tags > span,
  .task-tags > a,
  .freelancer-detail-item a:hover,
  .list-4 li:before,
@@ -205,54 +204,54 @@
      box-shadow: 0 2px 8px rgba(100,190,67,0.25) 
 }*/
  .sidebar-search-button-container button {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.1);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 10%);
 }
  .sidebar-search-button-container button:hover {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.25);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 25%);
 }
  .job-listing.with-apply-button:hover .list-apply-button {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 15%);
 }
  .task-listing-bid-inner .button {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 15%);
 }
  .task-listing-bid-inner .button:hover {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.25);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 25%);
 }
  .task-tags > span,
  .task-tags > a {
-     background-color: rgba(100,190,67,.07);
+     background-color: rgba(var(--rgbColor), 20%);
 }
  .freelancers-grid-layout .freelancer-details a.button {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.1);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 10%);
 }
  .freelancer-details a.button:hover {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.2);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 20%);
 }
  .freelancers-list-layout .freelancer-details a.button {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 15%);
 }
  .freelancers-list-layout .freelancer-details a.button:hover {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.25);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 25%);
 }
  .letters-list a.current {
-     box-shadow: 0 2px 8px rgba(100,190,67,0.25);
+     box-shadow: 0 2px 8px rgba(var(--rgbColor), 25%);
 }
  span.button, button.button, input[type="button"], input[type="submit"], a.button {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 15%);
 }
  .move-on-hover {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.1);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 10%);
 }
  .move-on-hover:hover {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.2);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 20%);
 }
  .keyword {
      background-color: rgba(var(--rgbColor), 10%);
 }
  @keyframes switch-shadow-color {
      0% {
-         box-shadow: 0 0 0 0 rgba(100,190,67,0.6);
+         box-shadow: 0 0 0 0 rgba(var(--rgbColor), 60%);
     }
      100% {
          box-shadow: 0 0 0px 10px rgba(0,0,0,0);
@@ -260,20 +259,20 @@
 }
  @keyframes radius-shadow {
      0% {
-         box-shadow: 0 0 0 0 rgba(100,190,67,0.4);
+         box-shadow: 0 0 0 0 rgba(var(--rgbColor), 40%);
     }
      100% {
          box-shadow: 0 0 0 10px rgba(0,0,0,0);
     }
 }
  .uploadButton .uploadButton-button {
-     box-shadow: 0 3px 10px rgba(100,190,67,0.1);
+     box-shadow: 0 3px 10px rgba(var(--rgbColor), 10%);
 }
  .uploadButton .uploadButton-button:hover {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 15%);
 }
  .category-box:hover {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.2);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 20%);
 }
  .photo-box:hover {
      box-shadow: 0 4px 12px rgba(100,190,67,0.25);
@@ -282,50 +281,50 @@
      background-color: rgba(var(--rgbColor), 10%);
 }
  .pricing-plan .button:hover, .pricing-plan.recommended .button {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 15%);
 }
  .pricing-plan .button {
      box-shadow: 0 4px 12px rgba(100,190,67,0.1);
 }
  .pricing-plan .button:hover {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 15%);
 }
  .breathing-icon {
-     box-shadow: 0 0 0 15px rgba(100,190,67,0.07);
+     box-shadow: 0 0 0 15px rgba(var(--rgbColor), 10%);
 }
  @keyframes bicokAnim {
      0%,100% {
-         box-shadow: 0 0 0 15px rgba(100,190,67,0.07);
+         box-shadow: 0 0 0 15px rgba(var(--rgbColor), 7%);
     }
      50% {
-         box-shadow: 0 0 0 28px rgba(100,190,67,0.12);
+         box-shadow: 0 0 0 28px rgba(var(--rgbColor), 10%));
     }
 }
  .icon-box-check {
-     box-shadow: 0 0 0 5px rgba(100,190,67,0.1);
+     box-shadow: 0 0 0 5px rgba(var(--rgbColor), 10%);
 }
  @keyframes checkAnim {
      0%,100% {
-         box-shadow: 0 0 0 5px rgba(100,190,67,0.15);
+         box-shadow: 0 0 0 5px rgba(var(--rgbColor), 15%);
     }
      50% {
-         box-shadow: 0 0 0 8px rgba(100,190,67,0.15);
+         box-shadow: 0 0 0 8px rgba(var(--rgbColor), 15%);
     }
 }
  .testimonial-author span {
-     box-shadow: 0 2px 10px rgba(100,190,67,0.25);
+     box-shadow: 0 2px 10px rgba(var(--rgbColor), 25%);
 }
  .bidding-widget .button {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 15%);
 }
  .bidding-widget .button:hover {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.25);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 25%);
 }
  .dialog-with-tabs .button {
-     box-shadow: 0 4px 12px rgba(100,190,67,0.15);
+     box-shadow: 0 4px 12px rgba(var(--rgbColor), 15%);
 }
  .slider-handle:after {
-     box-shadow: 0 0 0px 6px rgba(100,190,67,.12);
+     box-shadow: 0 0 0px 6px rgba(var(--rgbColor), 10%);
 }
  .slider-handle:hover:after {
      box-shadow: 0 0 0px 8px rgba(100,190,67,.12);
@@ -335,25 +334,19 @@
 }
  @keyframes clusterAnimation {
      0%,100% {
-         box-shadow: 0 0 0 6px rgba(100,190,67,0.15);
+         box-shadow: 0 0 0 6px rgba(var(--rgbColor), 15%);
     }
      50% {
-         box-shadow: 0 0 0 10px rgba(100,190,67,0.15);
+         box-shadow: 0 0 0 10px rgba(var(--rgbColor), 15%);
     }
 }
  @keyframes markerAnimation {
      0%,100% {
-         box-shadow: 0 0 0 6px rgba(100,190,67,0.15);
+         box-shadow: 0 0 0 6px rgba(var(--rgbColor), 15%);
     }
      50% {
-         box-shadow: 0 0 0 8px rgba(100,190,67,0.15);
+         box-shadow: 0 0 0 8px rgba(var(--rgbColor), 15%);
     }
-}
- a.apply-now-button {
-     box-shadow: 0 2px 8px rgba(100,190,67,0.15);
-}
- a.apply-now-button:hover {
-     box-shadow: 0 2px 8px rgba(100,190,67,0.35);
 }
 /*.dashboard-nav ul li.active-submenu,*/ .dashboard-nav ul li.active, .dashboard-nav ul li:hover {
      background-color: rgba(var(--rgbColor), 10%);
@@ -362,10 +355,10 @@
      background: rgba(var(--rgbColor), 10%);
 }
  .dashboard-box-list .button {
-     box-shadow: 0 3px 8px rgba(100,190,67,0.15);
+     box-shadow: 0 3px 8px rgba(var(--rgbColor), 15%);
 }
  .dashboard-box .button.dark:not(.ico):hover {
-     box-shadow: 0 3px 8px rgba(100,190,67,0.15);
+     box-shadow: 0 3px 8px rgba(var(--rgbColor), 15%);
 }
 
  #navigation ul ul.dropdown-nav ul.dropdown-nav li:hover a:after,
