--- a/assets/default/css/responsive.css
+++ b/assets/default/css/responsive.css
@@ -55,6 +55,12 @@ html {
 	html {
 		font-size: 16px;
 	}
+	.short-banner{
+		padding: 1.5rem 0;
+	}
+	.short-banner h1{
+		font-size: 2rem;
+	}
 	.xl-20 {
 		-webkit-box-flex: 0;
 		-ms-flex: 0 0 20%;
